--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pexels": "^1.2.1"
   }
 }
