--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "ibm-watson": "^6.0.4",
     "pexels": "^1.2.1"
   }
 }
