--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/multer": "^1.4.5",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
@@ -21,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ibm-watson": "^6.0.4",
+    "multer": "^1.4.2",
     "pexels": "^1.2.1"
   }
 }
