--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.8.0",
     "ibm-watson": "^6.0.4",
     "multer": "^1.4.2",
     "pexels": "^1.2.1"
