--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "rm -rf build/ && prettier --write source/ && tsc"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/multer": "^1.4.5",
@@ -18,10 +19,10 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "aws-sdk": "^2.907.0",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "firebase-admin": "^9.8.0",
     "ibm-watson": "^6.0.4",
     "multer": "^1.4.2",
     "pexels": "^1.2.1"
