--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.5",
     "aws-sdk": "^2.907.0",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
